frontend done plus connected with backend